# uasrisk

./: .cppcheck-suppressions  .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  conanfile.py  conanfile.txt  docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: cmake.yml  python-package.yml
cli/: CLI.cpp  CMakeLists.txt  conanfile.txt  riskmap.template.yml
include/: CMakeLists.txt
include/uasrisk/: IncrementalRiskVoxelGrid.h  RiskVoxelGrid.h
include/uasrisk/air/: AirRiskVoxelGrid.h
include/uasrisk/air/io/openaip/: OpenAIPReader.h
include/uasrisk/air/io/opensky/: OpenSkyCsvReader.h  OpenSkyJsonReader.h  OpenSkyReader.h
include/uasrisk/environment/: TypeDefs.h  VoxelGrid.h  VoxelGridBuilder.h
include/uasrisk/ground/: GroundRiskVoxelGrid.h  IncrementalGroundRiskVoxelGrid.h
include/uasrisk/path_planning/: AStarPlanner.h  PathPlanner.h
python/: AirRiskHelpers.h  Bindings.cpp  CMakeLists.txt  GroundRiskHelpers.h  PyVoxelGrid.cpp  eigen_tensor_ext.h  eigen_tensor_ext_pyb.h  pybind11_eigen_tensor.h  tensor.h  tensor_traits.h
python/pyuasrisk/: __init__.py  test.py
python/pyuasrisk/data/: Wards_(December_2011)_Boundaries_EW_BGC.dbf  Wards_(December_2011)_Boundaries_EW_BGC.shx  Wards_(December_2011)_Boundaries_EW_BGC.xml  density.csv  merged.shx
src/: AirRiskVoxelGrid.cpp  Bresenham3D.h  CMakeLists.txt  GroundRiskVoxelGrid.cpp  IncrementalGroundRiskVoxelGrid.cpp  RiskVoxelGrid.cpp  TypeDefs.h  VoxelGrid.cpp  VoxelGrid.h  VoxelGridBuilder.cpp  VoxelGridBuilder.h  VoxelGridBuilderVisitor.cpp  VoxelGridBuilderVisitor.h  uasrisk.cpp  uasrisk.h
src/openaip/: CMakeLists.txt  OpenAIPReader.cpp  OpenAIPReader.h
src/opensky/: CMakeLists.txt  OpenSkyCsvReader.cpp  OpenSkyCsvReader.h  OpenSkyJsonReader.cpp  OpenSkyJsonReader.h  OpenSkyReader.cpp  OpenSkyReader.h
src/path_planning/: AStarPlanner.cpp  CMakeLists.txt  PathPlanner.cpp  PathUtils.h
test/: AirRiskVoxelGridTests.cpp  CMakeLists.txt  EmptyGridTests.cpp  FullIngestTests.cpp  GroundRiskIncrementalTests.cpp  GroundRiskIntegrationTests.cpp  GroundRiskVoxelGridTests.cpp  PathPlannerAStarTests.cpp  RiskVoxelGridTests.cpp  VoxelGridTests.cpp  test_bindings.py
test/data/: openaip_airspace_uk.aip
