[build-system]
requires = [
  "scikit-build-core-conan",
  "pybind11",
  "cmake",
  "ninja",
  "conan"
]
build-backend = "scikit_build_core_conan.build"


[project]
name = "pyuasrisk"
version = "0.0.1"
description="Risk calculation for Unmanned Aerial Systems"
authors = [
  { name = "Aliaksei Pilko", email = "dev@apilko.me" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: Other/Proprietary License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
build-verbosity = 1

[tool.scikit-build-core-conan]
path = "."
build = "missing"
conanfile = "conanfile.py"
output-folder = "build"
wheel.packages = [
  "python/pyuasrisk",
  "python/pyuasrisk/data",
  "python/pyuasrisk/lib",
]
cmake.verbose = true

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
BUILD_SHARED_LIBS = "OFF"
BUILD_TESTING = "OFF"
BUILD_EXAMPLES = "OFF"
UR_BUILD_CLI = "OFF"
UR_BUILD_PYTHON_BINDINGS = "ON"
CMAKE_INSTALL_RPATH = "$ORIGIN"
CMAKE_BUILD_WITH_INSTALL_RPATH = "ON"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "OFF"
